--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
+<a href="https://all-projects-portfolio.web.app/" target="_blank" class="row">
+	<img class="logo-img" src="./assets/logo.svg" />
+	<div class="logo-txt">
+		<h1>FLAVIA</h1>
+		<span>Kosti</span>
+	</div>
+</a>
 <h1>NgRx Introduction</h1>
 
-<app-counter-output></app-counter-output>
-<app-counter-controls></app-counter-controls>
+<app-counter-output />
+<app-counter-controls />
