NgRX: Re-design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
 		<span>Kosti</span>
 	</div>
 </a>
-<h1>NgRx Introduction</h1>
-
-<app-counter-output />
-<app-counter-controls />
+<div class="container">
+	<h1>NgRx Introduction</h1>
+	<app-counter-output />
+	<app-counter-controls />
+</div>
