--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,7 +31,7 @@ h1 {
   padding: 0;
   line-height: 1;
   letter-spacing: 4px;
-  color: #ffffff;
+  color: #232323;
 }
 
 .logo-txt h1 {
@@ -54,4 +54,16 @@ h1 {
 
 a {
   text-decoration: none;
+}
+
+.container {
+  background-color: #232323;
+  width: 35rem;
+  height: 30rem;
+  margin: 5rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
 }
