--- a/src/styles.css
+++ b/src/styles.css
@@ -5,12 +5,12 @@
 }
 
 html {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 }
 
 body {
   margin: 0;
   color: #dedede;
-  background-color: #333;
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
